fix: chat buttons gap

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -74,7 +74,7 @@ section {
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-end;
-  gap: 10px;
+  gap: 20px;
 
   transition: gap 0s;
 }
